Fixed icon alignment

--- a/src/pages/Login/Login.css
+++ b/src/pages/Login/Login.css
@@ -1,89 +1,95 @@
 .login-page {
-  width: 100%;
-  height: 80vh;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  overflow: hidden;
+	width: 100%;
+	height: 80vh;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	overflow: hidden;
 }
 
 .login-form-container {
-  width: 90%;
-  max-width: 512px;
-  padding: 1rem;
-  text-align: center;
-  border-radius: 12px;
-  background-color: hsla(0, 100%, 100%, 0.5);
-  backdrop-filter: blur(64px);
-  border: 1px solid #ccc;
-  box-shadow: 4px 4px 12px rgba(0, 0, 0, 0.05);
+	width: 90%;
+	max-width: 512px;
+	padding: 1rem;
+	text-align: center;
+	border-radius: 12px;
+	background-color: hsla(0, 100%, 100%, 0.5);
+	backdrop-filter: blur(64px);
+	border: 1px solid #ccc;
+	box-shadow: 4px 4px 12px rgba(0, 0, 0, 0.05);
 }
 
 .login-form-container h2 {
-  padding: 3rem 0;
+	padding: 3rem 0;
 }
 
 .login-form {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  flex-direction: column;
-  flex-wrap: wrap;
-  gap: .6rem 0;
-  padding: 1rem;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	flex-direction: column;
+	flex-wrap: wrap;
+	gap: 0.6rem 0;
+	padding: 1rem;
 }
 
 input {
-  padding: .5rem .5rem;
-  width: 80%;
-  max-width: 480px;
+	padding: 0.5rem 0.5rem;
+	width: 80%;
+	max-width: 480px;
 }
 
 .login-submit {
-  width: 90%;
-  display: flex;
-  align-items: center;
-  justify-content: center;
+	width: 90%;
+	display: flex;
+	align-items: center;
+	justify-content: center;
 }
 
 .login-forgot-password {
-  width: 90%;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  padding: 1rem;
+	width: 90%;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	padding: 1rem;
 }
 
 .login-seperator {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  flex-direction: row;
-  padding: 1.5rem;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	flex-direction: row;
+	padding: 1.5rem;
 }
 
 .login-seperator hr {
-  width: 20%;
+	width: 20%;
 }
 
 .login-social {
-  padding: 1rem;
-  display: flex;
-  align-items: center;
-  justify-content: center;
+	padding: 1rem;
+	display: flex;
+	align-items: center;
+	justify-content: center;
 }
 
 .login-sign-up {
-  padding: 1rem;
+	padding: 1rem;
 }
 
 .login-warning {
-  width: 80%;
-  position: relative;
-  display: flex;
-  align-items: center;
-  justify-content: flex-start;
-  color: #707070;
-  font-size: smaller;
-  top: -.5rem;
+	width: 80%;
+	position: relative;
+	display: flex;
+	align-items: center;
+	justify-content: flex-start;
+	color: #707070;
+	font-size: smaller;
+	top: -0.5rem;
+}
+
+.login-google img {
+	width: 1.5rem !important;
+	padding: 0 !important;
+	margin-right: 1rem;
 }
